
2018-10-12  Simon Sobisch <simonsobisch@gnu.org>

	* pplex.l: fixed TITLE being consumed as statement when actually starting
	  a user defined word

2018-10-08  Simon Sobisch <simonsobisch@gnu.org>

	* parser.y: warn about unimplemented OPEN REVERSED / WITH NO REWIND,
	  see FR #343
	* parser.y: RM/COBOL compatibility - allow LOCK clause on
	  OPEN REVERSED / WITH NO REWIND

2018-10-02  Simon Sobisch <simonsobisch@gnu.org>

	* typeck.c (cb_validate_program_environment, cb_validate_program_data,
	  cb_validate_program_body): only use the specified parameter
	  cb_program prog instead of current_program
	* typeck.c (cb_validate_program_body): splitted cb_validate_labels()
	  and cb_resolve_debug_refs() to own functions
	* typeck.v (cb_resolve_debug_refs): added size handling for cd-names
	* parser.y (debugging_target), typeck.c (cb_resolve_debug_refs):
	  added check for duplicate reference of items in DEBUGGING procedures;
	  allow subscripts/refmod during parse to provide a clean check later

2018-09-28  Simon Sobisch <simonsobisch@gnu.org>

	* parser.y: ACCEPT x FROM ESCAPE _key
	* parser.y, reserved.c: extended parsing for ACUCOBOL-GT
	  DISPLAY WINDOW

2018-09-27  Simon Sobisch <simonsobisch@gnu.org>

	* parser.y, reserved.c: added ACUCOBOL-GT statements
	  ACCEPT FROM TERMINAL-INFO / SYSTEM-INFO as PENDING
	* parser.y: added parsing for explicit "NO" BELL

2018-09-23  Simon Sobisch <simonsobisch@gnu.org>

	* tree.c (validate_indexed_key_field): added missing checked for
	  valid keys in files with split keys
	* parser.y, tree.h, typeck.c: added NATIONAL COLLATING SEQUENCE
	  as PENDING
	* cobc.h (CB_CS_OPEN), reserved.c: new context-sensitivity for OPEN
	* parser.y: added extension duplicate clause on primary key as PENDING
	  and extension WITH NO DUPLICATES

2018-09-22  Simon Sobisch <simonsobisch@gnu.org>

	* field.c (cb_validate_field): deactivated questionable incrementing
	  if reference-counter for GLOBAL fields
